example notebook and interface bugs are fixed

--- a/examples/simple_pid.ipynb
+++ b/examples/simple_pid.ipynb
@@ -6,16 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from FR3Env import getDataPath\n",
+    "# from FR3Env import getDataPath\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from pinocchio.robot_wrapper import RobotWrapper\n",
+    "# from pinocchio.robot_wrapper import RobotWrapper\n",
     "from scipy.spatial.transform import Rotation as R\n",
     "import pickle\n",
     "import sys\n",
     "import time\n",
-    "sys.path.append('/home/mocap/dgm-ws/install/dynamic_graph_manager/lib/python3.8/site-packages')\n",
-    "from dgh_franka import FrankaDynamicGraphHead"
+    "# sys.path.append(\"/usr/local/lib/python3.8/site-packages\")\n",
+    "from dgh_franka import FrankaDynamicGraphHead\n",
+    "import yaml"
    ]
   },
   {
@@ -47,13 +48,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "nominal_joint_angles = np.array(\n",
+    "    [\n",
+    "        0.0,\n",
+    "        -np.pi / 4,\n",
+    "        0.0,\n",
+    "        -3 * np.pi / 4,\n",
+    "        0.0,\n",
+    "        np.pi / 2,\n",
+    "        np.pi / 4,\n",
+    "        0.001,\n",
+    "        0.001,\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "start_time = time.time()\n",
     "computation_times = []\n",
     "\n",
     "for i in range(1000000):\n",
     "    # read states and get time\n",
-    "    state = franka_dgh.read_states()\n",
-    "    q, dq, τ = state\n",
+    "    state = franka_dgh.readJoints()\n",
+    "    q, dq, τ = state[\"joint_positions\"], state[\"joint_velocities\"], state[\"joint_torques\"]\n",
     "    q = np.concatenate((q.copy(), np.array([0.001, 0.001])))\n",
     "    dq = np.concatenate((dq.copy(), np.array([0.0, 0.0])))\n",
     "    \n",
@@ -61,9 +83,9 @@
     "\n",
     "    # set control, last 2 terms are for the finger\n",
     "    franka_dgh.cmd = tau[0:7]\n",
-    "    franka_dgh.write_command(tau[0:7])\n",
+    "    franka_dgh.setCommand(tau[0:7])\n",
     "    computation_times.append(time.time() - start_time)\n",
-    "#     time.sleep(0.001)"
+    "    time.sleep(0.001)"
    ]
   },
   {
