updated pid example

--- a/examples/simple_pid.ipynb
+++ b/examples/simple_pid.ipynb
@@ -57,8 +57,6 @@
     "        0.0,\n",
     "        np.pi / 2,\n",
     "        np.pi / 4,\n",
-    "        0.001,\n",
-    "        0.001,\n",
     "    ]\n",
     ")"
    ]
@@ -72,18 +70,17 @@
     "start_time = time.time()\n",
     "computation_times = []\n",
     "\n",
-    "for i in range(1000000):\n",
+    "for i in range(10000):\n",
     "    # read states and get time\n",
-    "    state = franka_dgh.readJoints()\n",
-    "    q, dq, τ = state[\"joint_positions\"], state[\"joint_velocities\"], state[\"joint_torques\"]\n",
-    "    q = np.concatenate((q.copy(), np.array([0.001, 0.001])))\n",
-    "    dq = np.concatenate((dq.copy(), np.array([0.0, 0.0])))\n",
+    "    state = franka_dgh.readStates()\n",
+    "    q, dq = state[\"q\"], state[\"dq\"]\n",
+    "    q = q.copy()\n",
+    "    dq = dq.copy()\n",
     "    \n",
     "    tau = 10 * (nominal_joint_angles - q) + 1 * (0 - dq)\n",
     "\n",
     "    # set control, last 2 terms are for the finger\n",
-    "    franka_dgh.cmd = tau[0:7]\n",
-    "    franka_dgh.setCommand(tau[0:7])\n",
+    "    franka_dgh.setCommand(tau)\n",
     "    computation_times.append(time.time() - start_time)\n",
     "    time.sleep(0.001)"
    ]
