--- a/examples/simple_pid.ipynb
+++ b/examples/simple_pid.ipynb
@@ -43,6 +43,8 @@
     "        0.0,\n",
     "        np.pi / 2,\n",
     "        np.pi / 4,\n",
+    "        0.001,\n",
+    "        0.001,\n",
     "    ]\n",
     ")"
    ]
@@ -56,7 +58,7 @@
     "start_time = time.time()\n",
     "computation_times = []\n",
     "\n",
-    "for i in range(10000):\n",
+    "for i in range(1000000):\n",
     "    # read states and get time\n",
     "    state = franka_dgh.readStates()\n",
     "    q, dq = state[\"q\"], state[\"dq\"]\n",
@@ -66,11 +68,7 @@
     "    tau = 10 * (nominal_joint_angles - q) + 1 * (0 - dq)\n",
     "\n",
     "    # set control, last 2 terms are for the finger\n",
-<<<<<<< HEAD
     "    franka_dgh.setCommand(tau[0:7])\n",
-=======
-    "    franka_dgh.setCommand(tau)\n",
->>>>>>> 7e07b03ff847cf473ebb3225a59c16962f2b86c0
     "    computation_times.append(time.time() - start_time)\n",
     "    time.sleep(0.001)"
    ]
@@ -114,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (default, Mar 13 2023, 10:26:41) \n[GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
